# test-bin-lfs

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml  test.py
src/bin_lfs/: __init__.py
src/cpp/: CMakeLists.txt  bin_lfs.cpp
static_lib/: CMakeLists.txt  deps.cpp
